--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/* --------------------------------------------------- Colors ---------------------------------------- */
+/*--------------------------------------------Colors*/
+
 .bg-color-name-title {
     background-color: #676767;
+}
+
+.bg-color-three-reasons {
+    background-color: #fff;
 }
 
 .ui-menu-color-home {
@@ -21,9 +26,30 @@
     background-color: #525252;
 }
 
-/* --------------------------------------------------- Special paddings/margins/text ---------------------------------------- */
-h1,h2,h3,h4 {
-    margin: 0px;
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/* ----------------------------------------Special paddings/margins/text */
+
+h1,
+h2,
+h3,
+h4 {
+    margin: 0;
 }
 
 .uppercase {
@@ -40,7 +66,25 @@ h1,h2,h3,h4 {
     display: inline-block;
 }
 
-/* --------------------------------------------------- Heading ---------------------------------------- */
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/*--------------------------------------------Heading*/
+
 header {
     margin: 0;
 }
@@ -85,13 +129,13 @@ header {
     font-size: 0;
 }
 
-#nav {
-    margin: 0;
-}
-
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
@@ -125,13 +169,14 @@ header {
     letter-spacing: 2px;
 }
 
-/* --------------------------------------------------- Hover.css ---------------------------------------- */
-.hvr-sweep-to-bottom::before {
-    background-color: rgba(0, 0, 0, 0.2);
+/*--------------------------------------------Hover.css*/
+
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/* --------------------------------------------------- Footer ---------------------------------------- */
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -169,7 +214,6 @@ footer {
     text-align: center;
     color: #fafafa;
     background: #8f8f8f;
-
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
